Fixed error message text overflow

--- a/src/app/auth/components/login-form/login-form.component.css
+++ b/src/app/auth/components/login-form/login-form.component.css
@@ -25,6 +25,10 @@
   flex-direction: column;
 }
 
+.alert {
+  overflow-wrap: anywhere;
+}
+
 .irecipe-create-account {
   color: var(--irecipe-secondary);
 }
